// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> renders the <Card /> and toggle the card feature 1`] = `
<div
  class="card__Group-sc-1tn30zk-2 kliFbh"
>
  <div
    class="card__Container-sc-1tn30zk-1 bgcQfK"
  >
    <p
      class="card__Title-sc-1tn30zk-0 hyRsiq"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-sc-1tn30zk-12 eKDtPX"
    >
      <div
        class="card__Item-sc-1tn30zk-13 geaPKm"
        data-testid="tiger-king-item-feature"
      >
        <img
          class="card__Image-sc-1tn30zk-14 gqNPkz"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-sc-1tn30zk-11 dDbMIn"
        >
          <p
            class="card__SubTitle-sc-1tn30zk-3 cvZbkK"
          >
            Tiger King
          </p>
          <p
            class="card__Text-sc-1tn30zk-4 ZQkhT"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-sc-1tn30zk-1 bgcQfK"
  >
    <p
      class="card__Title-sc-1tn30zk-0 hyRsiq"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-sc-1tn30zk-12 eKDtPX"
    >
      <div
        class="card__Item-sc-1tn30zk-13 geaPKm"
        data-testid="juno-item-feature"
      >
        <img
          class="card__Image-sc-1tn30zk-14 gqNPkz"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-sc-1tn30zk-11 dDbMIn"
        >
          <p
            class="card__SubTitle-sc-1tn30zk-3 cvZbkK"
          >
            Juno
          </p>
          <p
            class="card__Text-sc-1tn30zk-4 ZQkhT"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> renders the <Card /> with populated data 1`] = `
<div
  class="card__Group-sc-1tn30zk-2 kliFbh"
>
  <div
    class="card__Container-sc-1tn30zk-1 bgcQfK"
  >
    <p
      class="card__Title-sc-1tn30zk-0 hyRsiq"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-sc-1tn30zk-12 eKDtPX"
    >
      <div
        class="card__Item-sc-1tn30zk-13 geaPKm"
      >
        <img
          class="card__Image-sc-1tn30zk-14 gqNPkz"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-sc-1tn30zk-11 dDbMIn"
        >
          <p
            class="card__SubTitle-sc-1tn30zk-3 cvZbkK"
          >
            Tiger King
          </p>
          <p
            class="card__Text-sc-1tn30zk-4 ZQkhT"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-sc-1tn30zk-1 bgcQfK"
  >
    <p
      class="card__Title-sc-1tn30zk-0 hyRsiq"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-sc-1tn30zk-12 eKDtPX"
    >
      <div
        class="card__Item-sc-1tn30zk-13 geaPKm"
      >
        <img
          class="card__Image-sc-1tn30zk-14 gqNPkz"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-sc-1tn30zk-11 dDbMIn"
        >
          <p
            class="card__SubTitle-sc-1tn30zk-3 cvZbkK"
          >
            Juno
          </p>
          <p
            class="card__Text-sc-1tn30zk-4 ZQkhT"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
